--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,46 @@
-body {
-    background: red;
+/*Colors*/
+body{
+    background: #42090A;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+/*Nav*/
+a{
+    text-decoration: none; /*no underline*/ 
+    background: #73150F;
+    color: white;
+    padding: 2px;
+    border-radius: 3px;
+
+}
+a:hover{
+background: #595758;
+}
+/*images*/
+img {
+    border: 5px solid #595758;
+    border-radius: 2px;
+}
+/*tables*/
+table{
+    border-collapse: collapse;
+}
+th,td {
+    border: 4px solid #11425A;
+    padding: 4px black;
+
+}
+th{
+background: #252324;
+}
+td{
+    background: white;
+}
+/*fonts*/
+h1 {
+    color: #595758;
+    font-style: italic;
+}
+h2 { 
+    color: #595758;
+    font-style: italic;
 }
