--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,10 @@ h2 {
     color: #595758;
     font-style: italic;
 }
+h3{
+    color:#595758;
+    font-style: italic;
+}
+.special{
+    color: red
+}
