--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 /*Colors*/
 body{
-    background: #42090A;
+    background: #252324;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 /*Nav*/
 a{
     text-decoration: none; /*no underline*/ 
-    background: #73150F;
+    background: #11425A;
     color: white;
     padding: 2px;
     border-radius: 3px;
@@ -45,7 +45,7 @@ h2 {
     font-style: italic;
 }
 h3{
-    color:#595758;
+    color:#11425A;
     font-style: italic;
 }
 .special{
