--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,10 @@ h3{
     font-style: italic;
 }
 .special{
-    color: red
+    color: red;
+}
+strong {
+    color:pink;
 }
 #big {
   font-size: 16px;  
