--- a/assignments/assignment 2/styles.css
+++ b/assignments/assignment 2/styles.css
@@ -2,9 +2,10 @@
 body{
     background: #731702;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-image: url(images/autumn.jpg)
 }
 /*Nav*/
-a{
+a{     
     text-decoration: none; /*no underline*/ 
     background: #D9A404;
     color: white;
@@ -48,5 +49,5 @@ h2 {
     color: #D9A404
 }
 strong{
-    font-style: bold;
+    font-size: 16px;
 }
