--- a/assignments/assignment 3/styles.css
+++ b/assignments/assignment 3/styles.css
@@ -49,7 +49,7 @@ display: inline-block;
 
 /*larger resolutions*/
 @media(min-width:900px){
-    #main-nav ul, .flex-container,#main-nav a{
+    #main-nav ul,#main-nav li .flex-container,#main-nav a{
         display: flex;
     }
     #main-nav li,.content-section,#main-nav a{
