--- a/assignments/assignment 3/styles.css
+++ b/assignments/assignment 3/styles.css
@@ -50,10 +50,10 @@ list-style-type: none;
 }
 /*larger resolutions*/
 @media(min-width:900px){
-    #main-nav ul,#main-nav li .flex-container,#main-nav a,#link-section {
+    #main-nav ul,#main-nav li .flex-container,#main-nav a {
         display: flex;
     }
-    #main-nav li,.content-section,#main-nav a,#link-section{
+    #main-nav li,.content-section,#main-nav a, #link-section{
         flex:1;
     }
 }
