--- a/assignments/assignment 3/styles.css
+++ b/assignments/assignment 3/styles.css
@@ -54,7 +54,7 @@ list-style-type: none;
 }
 /*larger resolutions*/
 @media(min-width:900px){
-    #main-nav ul,#main-nav li #flex-container,#main-nav a,#content-section,#bottom-content{
+    #main-nav ul,#main-nav li #flex-container,#main-nav a,#bottom-content{
         display: flex;
     }
     #main-nav li,#content-section,#main-nav a, #link-section, #bottom-content{
