--- a/assignments/assignment 3/styles.css
+++ b/assignments/assignment 3/styles.css
@@ -54,10 +54,10 @@ list-style-type: none;
 }
 /*larger resolutions*/
 @media(min-width:900px){
-    #main-nav ul,#main-nav li #flex-container,#main-nav a,#bottom-content,#content-section{
+    #main-nav ul,#main-nav li #flex-container,#main-nav a,#bottom-content{
         display: flex;
     }
-    #main-nav li,#main-nav a, #link-section, #bottom-content{
+    #main-nav li,#main-nav a, #link-section, #bottom-content,#content-section{
         flex: 1;
     }
 }
