--- a/styles.css
+++ b/styles.css
@@ -64,12 +64,10 @@ strong {
 #center{
     text-align: center;
 }
+#Assingments{
+    background: blue ;
+}
 /*larger resolutions*/
-@media(min-width:900px){
-    #layout{
-        display: flex;
-    }
-   #layout{
-        flex: 1;
-    }
+@media(min-width 900px){
+
 }
