--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*Colors*/
 body{
-    background:black;
+    background:white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 /*Nav*/
@@ -65,6 +65,7 @@ strong {
     text-align: center;
 }
 #Assignments{
+    background: black;
     padding: 5px;
     border-radius: 5px;
 
