--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ strong {
     text-align: center;
 }
 #Assignments{
-    background: black;
+    background: white;
     padding: 5px;
     border-radius: 5px;
 
