--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ strong {
   font-size: 16px;  
 }
 #content {
-    background-color: black;
+    background-color: white;
 }
 /*Assignment 4*/
 #center{
