--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -4,7 +4,7 @@
     text-align: left;
     color: #ffffff;
     background-color: #73000A;
-    padding: 20px;
+    padding: 10px;
     margin: 0px;
     border: 2px solid #000000;
 }
@@ -18,6 +18,12 @@
 #highlightlist{
 border-top: 1px solid #000000;
 border-bottom: 1px solid #000000;
+text-decoration: none;
+}
+#highlightlist article{
+    display: block;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
 }
 #container{
     display: flex;
