--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -4,11 +4,10 @@
     text-align: left;
     color: #ffffff;
     background-color: #73000A;
-    padding: 5px;
-    margin: 0px;
+    padding: 2px;
     border: 2px solid #000000;
 }
-#branding h2{
+#maincontent h2{
     font-size: large;
     color: #73000A;
 }
@@ -17,6 +16,15 @@
 }
 #highlightlist{
 text-decoration: none;
+}
+#highlightlist a{
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+#highlighlist h2{
+    font-size: large;
+    color: #73000A;
 }
 #highlightlist article{
     display: block;
@@ -31,6 +39,7 @@ text-decoration: none;
     display: block;
     text-decoration: none;
     color: inherit;
+    
 }
 #columof2{
     border-left: 1px solid #73000A;
@@ -46,3 +55,24 @@ text-decoration: none;
     text-decoration: none;
 }
 
+#underglance{
+
+}
+#ugimage{
+
+}
+#group{
+
+}
+#glancetitle{
+
+}
+#glancehead{
+
+}
+#glancetext{
+
+}
+#glancelink{
+
+}
