--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -41,11 +41,11 @@ text-decoration: none;
     color: inherit;
 
 }
-#columof5 h2{
+#DepartmentHI{
     font-size: large;
     color: #73000A;
 }
-#columof5 h3{
+#text h3{
     font-size: medium;
     color: #73000A;
 }
