--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -110,3 +110,20 @@ color: gray;
     border-bottom: 1px solid #000000;
     border-top: 1px solid #000000;
 }
+#footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgray;
+    color: black;
+    padding: 10px;
+}
+
+#footer a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#footer a:hover {
+    color: #73000A;
+}
