--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -112,16 +112,20 @@ color: gray;
 }
 #footer {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: lightgray;
+    background-color: gray;
     color: black;
     padding: 10px;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-left: 1px solid #000000;
+    border-right: 1px solid #000000;
+
 }
 
 #footer a {
     text-decoration: none;
     color: inherit;
+    display: inline;
 }
 
 #footer a:hover {
