--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -114,18 +114,19 @@ color: gray;
     display: flex;
     background-color: gray;
     color: black;
-    padding: 10px;
+    padding: 5px;
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
     border-left: 1px solid #000000;
     border-right: 1px solid #000000;
-
+    display: inline;
 }
 
-#footer a {
+#footer a,ul{
     text-decoration: none;
     color: inherit;
     display: inline;
+    list-style-type: none;
 }
 
 #footer a:hover {
