--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -131,11 +131,11 @@ color: gray;
 #footer a:hover {
     color: #73000A;
 }
-#colum{
+#column{
     background-color: #73000A;
 
 }
-#colum h1{
+#column h1{
     text-underline-position: below;
 }
 
