--- a/assignments/assignment 4/styles.css
+++ b/assignments/assignment 4/styles.css
@@ -1,3 +1,10 @@
+#tiptop{
+    font-size: 20px;
+ font-weight: bold;
+ color: #ffffff;
+ background-color: black;
+ border: 2px solid #000000;
+}
 #firsthead{
     font-size: 10px;
     font-weight: bold;
