--- a/assignments/assignment 7/styles.css
+++ b/assignments/assignment 7/styles.css
@@ -4,3 +4,15 @@
 #flex{
     display: flex;
 }
+#changeimage{
+background-color: #F2F0D6;
+color: #6DA6AF;
+}
+#slider{
+background-color: #F2F0D6;
+color: #6DA6AF;
+
+}
+#stars{
+
+}
