--- a/assignments/assignment 7/styles.css
+++ b/assignments/assignment 7/styles.css
@@ -15,6 +15,11 @@ color: #6DA6AF;
 #stars{
     background-color: #6DA6AF;
 }
+.shape {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+}
 @media(min-width:900px){
     #flex{
         display: flex;
