--- a/assignments/assignment 7/styles.css
+++ b/assignments/assignment 7/styles.css
@@ -20,6 +20,27 @@ color: #6DA6AF;
     height: 100px;
     background-color: red;
 }
+.star {
+    position: relative;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 100px solid red;
+    top: 50px;
+}
+
+.star:after {
+    position: absolute;
+    content: "";
+    top: 30px;
+    left: -50px;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 100px solid red;
+}
 @media(min-width:900px){
     #flex{
         display: flex;
