--- a/projects/part3/styles.css
+++ b/projects/part3/styles.css
@@ -93,7 +93,7 @@ text-align: center;
     display: none;
   }
   
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     /* Hides the hamburger menu on larger resolutions (full screen) */
     #hamburger {
       display: none;
