--- a/assignments/assignment 7/styles.css
+++ b/assignments/assignment 7/styles.css
@@ -20,6 +20,14 @@ color: #6DA6AF;
     height: 100px;
     background-color: red;
 }
+#flex-container,#slider,#clickimage,#stars{
+    display: block;
+
+    flex: 3;
+}
+#column{
+   flex: 1;
+}
 @media(min-width:900px){
     #flex{
         display: flex;
