--- a/assignments/assignment 8/styles.css
+++ b/assignments/assignment 8/styles.css
@@ -1,10 +1,42 @@
+#center{
+    text-align: center;
+}
+h1,h2,h3{
+text-align: center;
+}
+#commands{
+    text-align: center;
+}
+#image{
+  align-items: center;
+}
+#command{
+    align-items: center;
+}
+#content{
+    align-items: center;
+}
+#exercise1{
+    align-content: center;
+    padding: 10px;
+    margin: 10px;
+    background-color: white;
+}
+#excercise2{
+    align-content: center;
+    padding: 10px;
+    margin: 10px;
+    background-color: grey;
+}
+
+/* Add your CSS above */
 a {
     color: black;
     text-decoration: none;
     font-size: 18px;
   }
   
-  ul {
+ ul {
     list-style-type: none;
   }
   
