--- a/assignments/assignment 8/styles.css
+++ b/assignments/assignment 8/styles.css
@@ -1,32 +1,44 @@
 #center{
-    text-align: center;
+  text-align: center;
 }
 h1,h2,h3{
-text-align: center;
+  text-align: center;
 }
 #commands{
-    text-align: center;
+  text-align: center;
+  margin: 5px;
+  padding: 5px;
+  border: 5px;
+  border-style: 5px solid black;
 }
 #image{
   align-items: center;
+  padding: 10px;
+  border: 10px;
 }
 #command{
-    align-items: center;
+  align-items: center;
 }
 #content{
-    align-items: center;
+  align-items: center;
 }
 #exercise1{
-    align-content: center;
-    padding: 10px;
-    margin: 10px;
-    background-color: white;
+  align-content: center;
+  padding: 10px;
+  margin: 10px;
+  background-color: white;
+  border: 10px;
+  border-style: 10px solid black;
+  border-width: 1px;
 }
 #excercise2{
-    align-content: center;
-    padding: 10px;
-    margin: 10px;
-    background-color: grey;
+  align-content: center;
+  padding: 10px;
+  margin: 10px;
+  background-color: grey;
+  border: 10px;
+  border-style: 10px solid black;
+  border-width: 1px;
 }
 
 /* Add your CSS above */
@@ -41,11 +53,11 @@ a {
   }
   
   #main-nav ul {
-    background-color: red;
+    background-color: none;
   }
   
   #nav-items li {
-    padding: 15px 0;
+    padding: 5px 0;
     text-align: center;
   }
   
@@ -54,15 +66,15 @@ a {
   
   /* Creates space around hamburger menu */
   #hamburger {
-    padding: 10px;
+    padding: 5px;
   }
   
   /* Creates the actual structure of the hamburger menu */
   #hamburger div {
-    width: 25px;
+    width: 5px;
     height: 3px;
     background-color: black;
-    margin: 6px 0;
+    margin: 2px 0;
   }
   
   /* Hide class to be used in JavaScript */
