--- a/projects/part3/styles.css
+++ b/projects/part3/styles.css
@@ -106,13 +106,16 @@ text-align: center;
     background: white;
     padding: 5px;
     border-radius: 5px;
-
-
 }
 #Artist,#Home,#Drops,#Favorites,#News{
   background-color: black;
   color: red;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#albumcol{
+background-color: red;
+color:white;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /*larger resolutions*/
