--- a/assignments/assignment 11/styles.css
+++ b/assignments/assignment 11/styles.css
@@ -11,12 +11,22 @@
     margin: 5px;
  }
 
+#mainbody{
+   background-color: aquamarine;
+   color: black;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
+}
+.tree{
+   background-color: blue;
+   padding: 5px;
+   margin: 5px;
+}
 
 
  @media(min-width: 900px){
 .tree-list{display: flex;}
-.tree{flex: 1;}
+.tree,.columns{flex: 1;}
 
 
 }
